Add an entry to config file for allowed origins

--- a/Authsvc/.env
+++ b/Authsvc/.env
@@ -3,3 +3,5 @@ DB_USERNAME="authsvc"
 DB_PORTNO=5433
 
 APP_LOGFILE="/var/local/log/GoBackend/Authsvc.log"
+
+SVC_ALLOWED_ORIGINS="localhost,0.0.0.0"
